2001-10-17  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: save original counter setup
	  and restore on unload (bug #464094)

2001-10-16  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in:
	* oprofile.h: workaround for Mandrake randomly
	  back-porting things.
 
2001-10-16  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c:
	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/oprof_start_util.cpp:
	* pp/opf_container.cpp:
	* pp/opf_filter.h:
	* pp/opf_filter.cpp:
	* pp/oprof_convert.cpp: add note device to gui,
	  general cleanup
	 
2001-10-16  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.h: fix likely() macro
 
2001-10-14  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
	* op_syscalls.c:
	* op_user.h:
	* oprofile.h:
	* oprofile.c:
	* dae/op_start:
	* dae/opd_proc.c:
	* dae/oprofiled.h:
	* dae/oprofiled.c: use a separate map buffer.
 
2001-10-14  John Levon  <moz@compsoc.man.ac.uk>

	* acinclude.m4: don't give up if we can't find moc
 
2001-10-14  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: merge no-thread code
 
2001-10-14  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c:
	* dae/oprofiled.c:
	* op_user.h:
	* oprofile.h:
	* op_syscalls.c: use string pool. Prime hash table
	  with common entries. Consider parent in name_hash.
 
2001-10-13  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.sgml: minor change
	* pp/opf_filter.cpp: better warning

2001-10-13  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: 0.0.6 has been released -> 0.0.7cvs
 
2001-10-12  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* doc/oprofile.sgml: new docs for annotation filter
 
2001-10-12  John Levon  <moz@compsoc.man.ac.uk>

	* pp/opf_filter.cpp: make output filters more like diff (needs doc),
	  briefer info message
 
2001-10-12  John Levon  <moz@compsoc.man.ac.uk>

	* doc/Makefile.in: add FIXME

	* gui/oprof_start.cpp: fix std::

	* acinclude.m4: more fixes
 